--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+<link rel="stylesheet" type="text/css" href="file:///C|/Users/mawan6/Desktop/GitHub/example/css/main.css">
 </head>
 
 <body>
+	<header>
+   		 <h1>First Github Project</h1>
+    </header>
 </body>
 </html>
