--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 	<header>
    		 <h1>First Github Project</h1>
     </header>
+    
+    <main>
+    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et lobortis metus, eget cursus augue. Ut ultricies commodo eros, auctor dictum felis fermentum a. Donec imperdiet id mi vel fringilla. Pellentesque maximus vehicula pulvinar. Nam quis nunc vitae leo dictum vulputate. Suspendisse potenti. Nullam id efficitur odio, ut vulputate augue. Pellentesque convallis nec purus non eleifend. Ut molestie nisi elit, quis fringilla nibh elementum in. Phasellus pellentesque ut tortor sit amet faucibus.</p>
+    	
+    </main>
 </body>
 </html>
